k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-site-deploy
  labels:
    app: portfolio-site
spec:
  selector:
    matchLabels:
      app: portfolio-site
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: portfolio-site
    spec:
      containers:
        - name: portfolio-site
          image: jackbruzan/portfolio:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "800Mi"
              cpu: "500m"
            limits:
              memory: "1000Mi"
              cpu: "700m"
      imagePullSecrets:
        - name: dockercreds
