k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-site-internal-service
spec:
  selector:
    app: portfolio-site
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
      name: http
