k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-site-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - www.bruzco.com
        - bruzco.com
      secretName: bruzcofantasy-tls
  rules:
    - host: "www.bruzcofantasy.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: angular-site-internal-service
                port:
                  number: 4200
    - host: "bruzcofantasy.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: angular-site-internal-service
                port:
                  number: 4200
